# RPiSonyRemote

./: app.py  boot-config.txt  button_test.py  button_test_2.py  discover.py  gpiotest.py  lumatest.py  main.py  packages.txt  pyproject.toml  requirements.txt  rpi.ods  sony_a7c_ble.txt  utils.py  yaml2pydict.py
libs/: button.py  config.py  eventbus.py  eventtypes.py  fontawesome.py  helpers.py  hwinfo.py  inputs.py  router.py  timer.py  utils.py
libs/ble/: utils.py
libs/device/: input.py  output.py
libs/macro/: calc.py
menu/: data.py  oled.py
tests/: test_utils.py
typings/: RPi.pyi
typings/RPi/: GPIO.pyi
